--- a/EmployeeTry/src/main/resources/application.properties
+++ b/EmployeeTry/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+server.port=5001
+
 spring.datasource.url=jdbc:mysql://localhost:3306/employeeTry
+
 spring.datasource.username=root
 spring.datasource.password =Simranmk@87000
 spring.datasource.testWhileIdle=true
