--- a/EmployeeTry/src/main/resources/application.properties
+++ b/EmployeeTry/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=5001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employeeTry
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:55998/railway
 
 spring.datasource.username=root
-spring.datasource.password =Simranmk@87000
+spring.datasource.password =AAfuoSoiLJZLeWHwUVxEehmYqyWWjAJR
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
@@ -20,6 +20,8 @@ spring.servlet.multipart.max-request-size=10MB
 # File upload directory
 file.upload-dir=C:\Users\Mohit Kumar\Documents/uploads/
 project.image=project/
+
+spring.profiles.active=${ENV:dev}
 
 
 
