--- a/EmployeeTry/src/main/resources/application.properties
+++ b/EmployeeTry/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.main.allow-circular-references=true
+#hsghsjhsj
 
 
 spring.servlet.multipart.max-file-size=10MB
